--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -993,6 +993,33 @@
                 <i class="ph ph-caret-right chevron"></i>
             </div>
             <div class="nav-group-items">
+                {% if not workspace_info or workspace_info.is_owner or workspace_info.permissions.keyword_research %}
+                <a href="{{ url_for('keyword_research.keyword_research') }}"
+                   class="nav-subitem {% if request.endpoint and 'keyword_research' in request.endpoint %}active{% endif %}"
+                   onclick="return BaseApp.checkGuestAccess(event, this)">
+                    <i class="ph ph-magnifying-glass"></i>
+                    <span>Keyword Research</span>
+                </a>
+                {% endif %}
+
+                {% if not workspace_info or workspace_info.is_owner or workspace_info.permissions.analyze_video %}
+                <a href="{{ url_for('analyze_video.analyze_video') }}"
+                   class="nav-subitem {% if request.endpoint and 'analyze_video' in request.endpoint %}active{% endif %}"
+                   onclick="return BaseApp.checkGuestAccess(event, this)">
+                    <i class="ph ph-video"></i>
+                    <span>Analyze Video</span>
+                </a>
+                {% endif %}
+
+                {% if not workspace_info or workspace_info.is_owner or workspace_info.permissions.competitors %}
+                <a href="{{ url_for('competitors.competitors') }}"
+                   class="nav-subitem {% if request.endpoint and 'competitors' in request.endpoint %}active{% endif %}"
+                   onclick="return BaseApp.checkGuestAccess(event, this)">
+                    <i class="ph ph-users-three"></i>
+                    <span>Competitors</span>
+                </a>
+                {% endif %}
+
                 {% if not workspace_info or workspace_info.is_owner or workspace_info.permissions.video_script %}
                 <a href="{{ url_for('video_script.video_script') }}"
                    class="nav-subitem {% if request.endpoint and 'video_script' in request.endpoint %}active{% endif %}"
@@ -1020,24 +1047,6 @@
                 </a>
                 {% endif %}
 
-                {% if not workspace_info or workspace_info.is_owner or workspace_info.permissions.thumbnail %}
-                <a href="{{ url_for('thumbnail.index') }}"
-                   class="nav-subitem {% if request.endpoint and 'thumbnail' in request.endpoint %}active{% endif %}"
-                   onclick="return BaseApp.checkGuestAccess(event, this)">
-                    <i class="ph ph-image"></i>
-                    <span>Thumbnail</span>
-                </a>
-                {% endif %}
-
-                {% if not workspace_info or workspace_info.is_owner or workspace_info.permissions.analyze_video %}
-                <a href="{{ url_for('analyze_video.analyze_video') }}"
-                   class="nav-subitem {% if request.endpoint and 'analyze_video' in request.endpoint %}active{% endif %}"
-                   onclick="return BaseApp.checkGuestAccess(event, this)">
-                    <i class="ph ph-video"></i>
-                    <span>Analyze Video</span>
-                </a>
-                {% endif %}
-
                 {% if not workspace_info or workspace_info.is_owner or workspace_info.permissions.optimize_video %}
                 <a href="{{ url_for('optimize_video.optimize_video') }}"
                    class="nav-subitem {% if request.endpoint and 'optimize_video' in request.endpoint %}active{% endif %}"
@@ -1047,12 +1056,12 @@
                 </a>
                 {% endif %}
 
-                {% if not workspace_info or workspace_info.is_owner or workspace_info.permissions.competitors %}
-                <a href="{{ url_for('competitors.competitors') }}"
-                   class="nav-subitem {% if request.endpoint and 'competitors' in request.endpoint %}active{% endif %}"
+                {% if not workspace_info or workspace_info.is_owner or workspace_info.permissions.thumbnail %}
+                <a href="{{ url_for('thumbnail.index') }}"
+                   class="nav-subitem {% if request.endpoint and 'thumbnail' in request.endpoint %}active{% endif %}"
                    onclick="return BaseApp.checkGuestAccess(event, this)">
-                    <i class="ph ph-users-three"></i>
-                    <span>Competitors</span>
+                    <i class="ph ph-image"></i>
+                    <span>Thumbnail</span>
                 </a>
                 {% endif %}
 
