--- a/app/templates/keyword_research/index.html
+++ b/app/templates/keyword_research/index.html
@@ -71,8 +71,7 @@
                         </div>
                         <div class="metric-content">
                             <div class="metric-label">Competition</div>
-                            <div class="metric-value" id="totalVideos">-</div>
-                            <div class="metric-sublabel" id="competitionLevel">-</div>
+                            <div class="metric-value" id="competitionLevel">-</div>
                         </div>
                     </div>
 
@@ -82,8 +81,7 @@
                         </div>
                         <div class="metric-content">
                             <div class="metric-label">Search Interest</div>
-                            <div class="metric-value" id="searchInterest">-</div>
-                            <div class="metric-sublabel" id="interestLevel">-</div>
+                            <div class="metric-value" id="interestLevel">-</div>
                         </div>
                     </div>
 
